test/regress/cov6-txact-period-unbalanced.test
; Coverage for textual_xacts.cc lines 276-278: period transaction failed to balance

~ monthly
    Expenses:Food    $100.00
    Expenses:Gas     $50.00

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg -> 1
__ERROR__
While parsing file "$FILE", line 5:
Unbalanced remainder is:
             $150.00
Amount to balance against:
             $150.00
While parsing periodic transaction:
> ~ monthly
>     Expenses:Food    $100.00
>     Expenses:Gas     $50.00
Error: Transaction does not balance
end test
